fixing bug for IE placement beef on mobile

--- a/src/sass/myservice-header.scss
+++ b/src/sass/myservice-header.scss
@@ -325,7 +325,16 @@ header {
   justify-content: center;
   min-width: 20px;
   padding: 1px;
-  position: absolute;
-  right: 5px;
-  top: 15px;
+  position: relative;
+  right: 20px;
+  bottom: 15px; 
+}
+
+@media screen and (min-width: $AU-media-md) {
+  .tasks-badge {
+    position: absolute;
+    bottom: unset;
+    right: 5px;
+    top: 15px;
+  }
 }
